--- a/index.html
+++ b/index.html
@@ -300,16 +300,16 @@
             <a href="#home" class="link">Launch Tool (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/project4.png" alt="Advanced Solar Air Heater Thermal Optimization" />
-            <h3>Advanced Solar Air Heater (SAH) Thermal Optimization</h3>
+            <img src="assets/SAH.jpeg" alt="Advanced Solar Air Heater Thermal Optimization" />
+            <h3>Advanced Solar Air Heater Thermal Optimization</h3>
             <p>
               Experimentally optimized a solar air heater using engineered surface roughness geometries to enhance turbulence and heat transfer. Achieved 13.3% higher thermal performance and 7.0% improved thermo-hydraulic efficiency. Developed empirical models supporting renewable energy and HVAC system design.
             </p>
             <a href="#home" class="link">View Details (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/project4.png" alt="Reliability Enhancement of Multibranched Heat Pipe Cooling Systems" />
-            <h3>Reliability Enhancement of Multibranched Heat Pipe (MBHP) Cooling Systems</h3>
+            <img src="assets/MBHP.jpeg" alt="Reliability Enhancement of Multibranched Heat Pipe Cooling Systems" />
+            <h3>Reliability Enhancement of Multibranched Heat Pipe Cooling Systems</h3>
             <p>
               Investigated the influence of condenser cooling-water flow on dry-out and thermal stability in multi-branched heat pipe systems. Identified operating conditions that improved cooling efficiency by 1.6% and reduced thermal runaway risk. Provided insights for designing more reliable thermal management solutions for high-power electronics.
             </p>
