--- a/index.html
+++ b/index.html
@@ -85,38 +85,65 @@
           <div class="timeline-entry">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <h3>Manufacturing Process Engineer – Graduate Research Assistant</h3>
-              <span class="company">Foxconn Industrial Internet (WISE, SUNY Binghamton)</span>
-              <span class="date">Oct 2024 – Present · Mount Pleasant, WI</span>
+              <h3>Manufacturing Process Engineer</h3>
+              <span class="company">Foxconn Industrial Internet, USA</span>
+              <span class="date">Jan 2026 – Present · Mount Pleasant, WI</span>
               <ul>
                 <li>
-                  Led NPI for three Google server assemblies, implementing
-                  standardized processes, PFMEAs and control plans achieving
-                  91% first pass yield during ramp‑up.
+                  Driving NPI process development by implementing DFM solutions, 
+                  qualifying new manufacturing processes and materials, and executing 
+                  DOE-based validation and Cpk analysis to establish robust, 
+                  production-ready process windows.
                 </li>
                 <li>
-                  Increased line utilization by 3.2% and freed 432 hours of
-                  engineering workload annually by developing automated
-                  Power&nbsp;BI OEE and downtime dashboards across six SMT/PCBA lines.
+                  Owning and sustaining manufacturing performance by troubleshooting 
+                  process, equipment, and material issues using SPC-driven analysis of 
+                  yield, throughput, and defect trends; executing RCCA and applying 
+                  discrete-event simulation to drive continuous process improvement.
                 </li>
                 <li>
-                  Boosted daily motherboard throughput by 42 units (~$178.5&nbsp;k
-                  in capacity) using capacity planning, takt‑time analysis and
-                  a custom discrete‑event simulation model.
+                  Leading end-to-end NPI line setup and validation through Cpk/Cmk 
+                  analysis, including equipment bring-up, process qualification, 
+                  documentation release, and cross-functional execution by coordinating 
+                  with Manufacturing, Quality, Design, Materials, and Program Managers 
+                  to deliver line &amp; build readiness on schedule.
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="timeline-entry">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>Manufacturing Process Engineer – Graduate Research Assistant</h3>
+              <span class="company">Foxconn Industrial Internet, USA – WISE, SUNY Binghamton</span>
+              <span class="date">Oct 2024 – Dec 2025 · Mount Pleasant, WI</span>
+              <ul>
+                <li>
+                  Led NPI for 3 data-center server assemblies, developing standardized 
+                  manufacturing processes, DFx insights, PFMEAs, control plans, and 
+                  documentation workflows that enabled 91% FPY during ramp-up.
                 </li>
                 <li>
-                  Led comprehensive DOE, tolerance analysis, SPC, MSA and
-                  CpK/CmK studies to quantify equipment capability, eliminate
-                  process variation and secure full NPI validation for high‑volume ramp‑up.
+                  Increased daily motherboard throughput by 42 units, unlocking 
+                  $178.5K/day in capacity by applying takt-time analysis, line balancing, 
+                  and discrete-event simulation to identify capacity, yield, and 
+                  equipment risks during L6/L10 NPI readiness.
                 </li>
                 <li>
-                  Developed BGA heatmap inspection, stencil optimization and
-                  warpage‑mitigation frameworks supporting CPU BGA process development.
+                  Improved line utilization by 3.2% and eliminated 432 engineering 
+                  hours/year by developing automated OEE and downtime dashboards across 
+                  6 SMT/PCBA lines to support build-readiness and risk reviews.
                 </li>
                 <li>
-                  Applied Lean Six Sigma, DMAIC and 8D/5‑Why RCA methodologies
-                  to reduce defects, improve changeover consistency and drive
-                  continuous improvement in high‑volume production.
+                  Developed CPU BGA heatmap inspection, stencil optimization, and 
+                  warpage-mitigation frameworks to address thermomechanical and 
+                  solder-joint reliability risks in advanced high-density assemblies.
+                </li>
+                <li>
+                  Supported process validation and acceptance testing by executing 
+                  structured analysis (DOE, tolerance studies, SPC, MSA) and applying 
+                  Lean Six Sigma and RCCA methodologies to resolve build issues and 
+                  improve process consistency.
                 </li>
               </ul>
             </div>
@@ -207,7 +234,7 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="section fade-in delay-4">
+    <section id="projects" class="section fade-in">
       <div class="container">
         <h2>Projects</h2>
         <div class="projects-grid">
@@ -403,7 +430,7 @@
     </section>
 
     <!-- Certifications Section -->
-    <section id="certifications" class="section fade-in delay-7">
+    <section id="certifications" class="section fade-in">
       <div class="container">
         <h2>Certifications</h2>
         <div class="certifications-list">
